--- a/Code/Inheritance demo.ipynb
+++ b/Code/Inheritance demo.ipynb
@@ -191,6 +191,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
