Python tutorial code update

--- a/Code/Python/Python basics.ipynb
+++ b/Code/Python/Python basics.ipynb
@@ -53,34 +53,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-04-12 13:26:30--  https://web.stanford.edu/~lcambier/python/text.txt\n",
-      "Resolving web.stanford.edu (web.stanford.edu)... 171.67.215.200\n",
-      "Connecting to web.stanford.edu (web.stanford.edu)|171.67.215.200|:443... connected.\n",
+      "--2021-01-24 13:13:58--  https://raw.githubusercontent.com/EricDarve/me343-cme216-winter-2021/main/Code/Python/text.txt\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.40.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.40.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 88 [text/plain]\n",
-      "Saving to: ‘text.txt’\n",
+      "Saving to: ‘text.txt.3’\n",
       "\n",
-      "text.txt            100%[===================>]      88  --.-KB/s    in 0s      \n",
+      "text.txt.3          100%[===================>]      88  --.-KB/s    in 0s      \n",
       "\n",
-      "2020-04-12 13:26:30 (3.36 MB/s) - ‘text.txt’ saved [88/88]\n",
+      "2021-01-24 13:13:58 (4.66 MB/s) - ‘text.txt.3’ saved [88/88]\n",
       "\n",
-      "--2020-04-12 13:26:30--  https://web.stanford.edu/~lcambier/python/star_wars_4th.txt\n",
-      "Resolving web.stanford.edu (web.stanford.edu)... 171.67.215.200\n",
-      "Connecting to web.stanford.edu (web.stanford.edu)|171.67.215.200|:443... connected.\n",
+      "--2021-01-24 13:13:58--  https://raw.githubusercontent.com/EricDarve/me343-cme216-winter-2021/main/Code/Python/star_wars_4th.txt\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.40.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.40.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 326321 (319K) [text/plain]\n",
-      "Saving to: ‘star_wars_4th.txt’\n",
+      "Saving to: ‘star_wars_4th.txt.3’\n",
       "\n",
-      "star_wars_4th.txt   100%[===================>] 318.67K  --.-KB/s    in 0.1s    \n",
+      "star_wars_4th.txt.3 100%[===================>] 318.67K  --.-KB/s    in 0.05s   \n",
       "\n",
-      "2020-04-12 13:26:31 (2.58 MB/s) - ‘star_wars_4th.txt’ saved [326321/326321]\n",
+      "2021-01-24 13:13:59 (5.90 MB/s) - ‘star_wars_4th.txt.3’ saved [326321/326321]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!wget https://web.stanford.edu/~lcambier/python/text.txt -O text.txt\n",
-    "!wget https://web.stanford.edu/~lcambier/python/star_wars_4th.txt -O star_wars_4th.txt"
+    "!wget https://raw.githubusercontent.com/EricDarve/me343-cme216-winter-2021/main/Code/Python/text.txt\n",
+    "!wget https://raw.githubusercontent.com/EricDarve/me343-cme216-winter-2021/main/Code/Python/star_wars_4th.txt"
    ]
   },
   {
@@ -1786,20 +1786,20 @@
     {
      "data": {
       "text/plain": [
-       "{'Juliane': ('juliane@aol.net', 71, 368),\n",
-       " 'Timothy': ('timothy@outlook.com', 44, 535),\n",
-       " 'Camilla': ('camilla@gmail.com', 55, 727),\n",
-       " 'Elizbeth': ('elizbeth@outlook.com', 19, 790),\n",
-       " 'Nena': ('nena@aol.net', 60, 532),\n",
-       " 'Yolando': ('yolando@outlook.com', 37, 622),\n",
-       " 'Emerson': ('emerson@gmail.com', 45, 599),\n",
-       " 'Katelynn': ('katelynn@aol.net', 38, 738),\n",
-       " 'Dreama': ('dreama@outlook.com', 28, 748),\n",
-       " 'Debi': ('debi@outlook.com', 21, 644),\n",
-       " 'Becki': ('becki@gmail.com', 42, 478),\n",
-       " 'Rossana': ('rossana@aol.net', 42, 797),\n",
-       " 'Jennefer': ('jennefer@outlook.com', 47, 405),\n",
-       " 'Mary': ('mary@outlook.com', 62, 542)}"
+       "{'Juliane': ('juliane@gmail.com', 69, 385),\n",
+       " 'Timothy': ('timothy@gmail.com', 20, 520),\n",
+       " 'Camilla': ('camilla@aol.net', 36, 474),\n",
+       " 'Elizbeth': ('elizbeth@gmail.com', 30, 564),\n",
+       " 'Nena': ('nena@outlook.com', 58, 513),\n",
+       " 'Yolando': ('yolando@aol.net', 23, 634),\n",
+       " 'Emerson': ('emerson@aol.net', 25, 508),\n",
+       " 'Katelynn': ('katelynn@aol.net', 54, 751),\n",
+       " 'Dreama': ('dreama@aol.net', 23, 459),\n",
+       " 'Debi': ('debi@aol.net', 62, 556),\n",
+       " 'Becki': ('becki@aol.net', 51, 603),\n",
+       " 'Rossana': ('rossana@gmail.com', 37, 803),\n",
+       " 'Jennefer': ('jennefer@outlook.com', 40, 804),\n",
+       " 'Mary': ('mary@aol.net', 25, 475)}"
       ]
      },
      "execution_count": 42,
@@ -1852,17 +1852,16 @@
     {
      "data": {
       "text/plain": [
-       "[('Timothy', 'timothy@outlook.com'),\n",
-       " ('Camilla', 'camilla@gmail.com'),\n",
-       " ('Elizbeth', 'elizbeth@outlook.com'),\n",
-       " ('Nena', 'nena@aol.net'),\n",
-       " ('Yolando', 'yolando@outlook.com'),\n",
-       " ('Emerson', 'emerson@gmail.com'),\n",
+       "[('Timothy', 'timothy@gmail.com'),\n",
+       " ('Elizbeth', 'elizbeth@gmail.com'),\n",
+       " ('Nena', 'nena@outlook.com'),\n",
+       " ('Yolando', 'yolando@aol.net'),\n",
+       " ('Emerson', 'emerson@aol.net'),\n",
        " ('Katelynn', 'katelynn@aol.net'),\n",
-       " ('Dreama', 'dreama@outlook.com'),\n",
-       " ('Debi', 'debi@outlook.com'),\n",
-       " ('Rossana', 'rossana@aol.net'),\n",
-       " ('Mary', 'mary@outlook.com')]"
+       " ('Debi', 'debi@aol.net'),\n",
+       " ('Becki', 'becki@aol.net'),\n",
+       " ('Rossana', 'rossana@gmail.com'),\n",
+       " ('Jennefer', 'jennefer@outlook.com')]"
       ]
      },
      "execution_count": 43,
@@ -1896,17 +1895,16 @@
     {
      "data": {
       "text/plain": [
-       "[('Timothy', 'timothy@outlook.com'),\n",
-       " ('Camilla', 'camilla@gmail.com'),\n",
-       " ('Elizbeth', 'elizbeth@outlook.com'),\n",
-       " ('Nena', 'nena@aol.net'),\n",
-       " ('Yolando', 'yolando@outlook.com'),\n",
-       " ('Emerson', 'emerson@gmail.com'),\n",
+       "[('Timothy', 'timothy@gmail.com'),\n",
+       " ('Elizbeth', 'elizbeth@gmail.com'),\n",
+       " ('Nena', 'nena@outlook.com'),\n",
+       " ('Yolando', 'yolando@aol.net'),\n",
+       " ('Emerson', 'emerson@aol.net'),\n",
        " ('Katelynn', 'katelynn@aol.net'),\n",
-       " ('Dreama', 'dreama@outlook.com'),\n",
-       " ('Debi', 'debi@outlook.com'),\n",
-       " ('Rossana', 'rossana@aol.net'),\n",
-       " ('Mary', 'mary@outlook.com')]"
+       " ('Debi', 'debi@aol.net'),\n",
+       " ('Becki', 'becki@aol.net'),\n",
+       " ('Rossana', 'rossana@gmail.com'),\n",
+       " ('Jennefer', 'jennefer@outlook.com')]"
       ]
      },
      "execution_count": 44,
@@ -1983,7 +1981,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'z': 978, 'H': 993, 'J': 993, 'A': 1000, 'F': 989, 'i': 991, 'l': 990, 'v': 1000, 'o': 999, 'M': 960, 'g': 993, 'Z': 1000, 'S': 983, 'K': 992, 'V': 1000, 'G': 981, 'f': 1000, 'C': 997, 'N': 999, 'n': 993, 'e': 992, 'Y': 990, 'P': 996, 'b': 992, 'y': 989, 'R': 982, 'm': 988, 'x': 997, 'X': 998, 'a': 985, 'k': 982, 'W': 999, 'u': 993, 'c': 993, 'j': 975, 'r': 979, 'B': 982, 'T': 999, 'U': 996, 'p': 970, 'w': 988, 'D': 997, 'L': 991, 'd': 989, 'O': 993, 'h': 999, 'Q': 981, 'E': 985, 's': 991, 'q': 984, 't': 998, 'I': 988}\n"
+      "{'z': 996, 'y': 989, 'N': 994, 'e': 993, 'r': 990, 'G': 1000, 'D': 998, 'j': 1000, 'w': 983, 'i': 981, 'H': 998, 'h': 990, 'q': 992, 'g': 995, 'n': 997, 'A': 997, 'a': 988, 'f': 997, 'v': 957, 'u': 996, 'O': 1000, 'p': 997, 'M': 979, 'V': 997, 'F': 995, 'Z': 997, 'L': 988, 'm': 976, 'Q': 989, 'l': 980, 'K': 1000, 'E': 986, 'X': 1000, 'b': 999, 'o': 994, 's': 991, 'R': 996, 'S': 1000, 't': 970, 'I': 994, 'C': 994, 'x': 979, 'Y': 979, 'c': 964, 'k': 1000, 'T': 947, 'U': 970, 'B': 985, 'J': 975, 'W': 991, 'd': 983, 'P': 979}\n"
      ]
     }
    ],
@@ -4129,7 +4127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
