--- a/Homework/HW3/hw3-starter-code/high_dim.ipynb
+++ b/Homework/HW3/hw3-starter-code/high_dim.ipynb
@@ -10,8 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.optimize as sopt\n",
-    "import tensorflow as tf\n",
-    "import pprint"
+    "import tensorflow as tf"
    ]
   },
   {
@@ -20,8 +19,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code to use the scipy optimizers to train a neural network\n",
-    "def function_factory(model, x_train, y_train, x_val=None, y_val=None,\n",
+    "# Code to use the scipy optimizers\n",
+    "\n",
+    "# use float64 by default\n",
+    "tf.keras.backend.set_floatx(\"float64\")\n",
+    "\n",
+    "# Reshape 1D arrays to 2D arrays\n",
+    "def reshape_2d(x):\n",
+    "    return tf.reshape(x,(x.shape[0],1))\n",
+    "\n",
+    "def function_factory(model, x_train, y_train, validation_data=None,\n",
     "                     iprint=-1):\n",
     "    \"\"\"A factory to create a function required by scipy.optimize.\n",
     "    Args:\n",
@@ -29,11 +36,11 @@
     "        loss [in]: a function with signature loss_value = loss(pred_y, true_y).\n",
     "        x_train [in]: input for training data.\n",
     "        y_train [in]: output for training data.\n",
-    "        x_val [in]: input for validation data.\n",
-    "        y_val [in]: output for validation data.        \n",
+    "        validation_data [in]: tuple (x_val,y_val) with validation data.\n",
+    "        iprint [in]: sets the frequency with which the loss info is printed out\n",
     "    Returns:\n",
     "        A function that has a signature of:\n",
-    "            loss_value, gradients = f(model_parameters).\n",
+    "            loss_value, gradients = f(model_parameters)\n",
     "    \"\"\"\n",
     "\n",
     "    # obtain the shapes of all trainable parameters in the model\n",
@@ -72,9 +79,9 @@
     "        # update the parameters in the model\n",
     "        assign_new_model_parameters(params_1d)       \n",
     "\n",
-    "        if not (x_val is None):\n",
+    "        if not (validation_data is None):\n",
     "          # compute validation loss\n",
-    "          loss_value = model.loss(y_val, model(x_val))\n",
+    "          loss_value = model.loss(validation_data[1], model(validation_data[0]))\n",
     "          # store validation value so we can retrieve later        \n",
     "          tf.py_function(value_and_grad.hist_loss_val.append,\n",
     "                        inp=[loss_value], Tout=[])         \n",
@@ -84,7 +91,6 @@
     "            tape.watch(model.trainable_variables)\n",
     "            # run the model\n",
     "            y_model = model(x_train, training=True)            \n",
-    "            # pprint(vars(model))\n",
     "            # loss value\n",
     "            pred_loss = model.loss(y_train, y_model)\n",
     "            # regularization loss\n",
@@ -101,7 +107,7 @@
     "\n",
     "        # print out iteration & loss\n",
     "        if (iprint >= 0 and value_and_grad.iter % iprint == 0):\n",
-    "            print(\"Loss function eval:\", value_and_grad.iter,\n",
+    "            tf.print(\"Loss function eval:\", value_and_grad.iter,\n",
     "                     \"loss:\", pred_loss, \n",
     "                     \"loss_reg:\", regularization_loss,\n",
     "                     \"total:\", total_value)\n",
@@ -135,10 +141,25 @@
     "    return value_and_grad\n",
     "\n",
     "\n",
-    "def model_fit(model, x_t, y_t, x_val=None, y_val=None,  maxiter=1000, iprint=-1,\n",
-    "              figname = None):\n",
+    "def model_fit(model, x_t, y_t, validation_data=None, epochs=1000, iprint=-1,\n",
+    "              figname=None):\n",
+    "    \"\"\" \n",
+    "    Fit a DNN model using scipy optimizers \n",
+    "  \n",
+    "  \n",
+    "    Parameters: \n",
+    "    model: tensorflow DNN model\n",
+    "    x_t: input training data\n",
+    "    y_t: output training data\n",
+    "    validation_data: tuple (x_val,y_val) with validation data\n",
+    "    epochs: maximum number of iterations in optimizer\n",
+    "    iprint: frequency for printing the loss function information. \n",
+    "            Do not print anything if negative. Otherwise, print\n",
+    "            a line every iprint iteration.\n",
+    "    figname [str]: file name to save the figure of the training loss  \n",
+    "    \"\"\"\n",
     "\n",
-    "    value_and_grad = function_factory(model, x_t, y_t, x_val, y_val,\n",
+    "    value_and_grad = function_factory(model, x_t, y_t, validation_data,\n",
     "                                      iprint)\n",
     "\n",
     "    # convert initial model parameters to a 1D tf.Tensor\n",
@@ -152,7 +173,7 @@
     "    method = 'L-BFGS-B'\n",
     "    results = sopt.minimize(fun=value_and_grad, x0=init_params,\n",
     "                            jac=True, method=method,\n",
-    "                            options={'maxiter': maxiter})\n",
+    "                            options={'maxiter': epochs})\n",
     "\n",
     "    print(\"\\nConvergence information:\")\n",
     "    print('loss:', results.fun)\n",
@@ -166,7 +187,7 @@
     "    # Plot history of loss\n",
     "    plt.figure()   \n",
     "    plt.plot(value_and_grad.hist_loss, label='loss')\n",
-    "    if not (x_val is None): \n",
+    "    if not (validation_data is None): \n",
     "        plt.plot(value_and_grad.hist_loss_val, label='validation')\n",
     "    plt.legend()\n",
     "    plt.xlabel('epoch')\n",
@@ -179,38 +200,12 @@
     "    if not (figname is None):\n",
     "        plt.savefig(figname,dpi=300)\n",
     "\n",
-    "    return results\n",
-    "\n",
-    "# Reshape 1D arrays to 2D arrays\n",
-    "def reshape_2d(x):\n",
-    "    return tf.reshape(x,(x.shape[0],1))\n",
-    "\n",
-    "# use float64 by default\n",
-    "tf.keras.backend.set_floatx(\"float64\")"
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class print_dot(tf.keras.callbacks.Callback):\n",
-    "    def on_epoch_begin(self, epoch, logs=None):\n",
-    "        if epoch % 100 == 0: print('')\n",
-    "        print('.', end='')\n",
-    "    def on_train_end(self, epoch, logs=None):\n",
-    "        print('\\nTraining is complete')\n",
-    "        \n",
-    "def print_training_info(history):\n",
-    "    loss = history.history['loss']\n",
-    "    error = history.history['mean_squared_error']\n",
-    "    print('Model loss {0:g}; metric error {1:g}'.format(loss[-1], error[-1]))   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,12 +242,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code to generate \n",
+    "# Build you model and train it using the function model_fit() provided above "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Written answers for Q1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Written answers for Q2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Written answers for Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code to generate data along different lines parallel and orthogonal to u\n",
     "\n",
     "n_lines = 4\n",
     "n_sample_plot = 128\n",
@@ -273,45 +319,22 @@
     "x_val_otg = np.zeros( (n_lines, n_sample_plot, d) )\n",
     "for i in range(n_lines):\n",
     "    for j in range(n_sample_plot):\n",
-    "        x_val_otg[i,j,:] = bias[i] * np.squeeze(u) + dir_otg[:,i] * uniform_distribution(j,n_sample_plot,1)\n",
+    "        x_val_otg[i,j,:] = bias[i] * np.squeeze(u) + uniform_distribution(j,n_sample_plot,1) * dir_otg[:,i]\n",
     "\n",
     "# Generate different lines, where in each line the variance of data is parallel with u \n",
     "x_val_prl = np.zeros( (n_lines, n_sample_plot, d) )\n",
     "for i in range(n_lines):\n",
     "    for j in range(n_sample_plot):\n",
-    "        x_val_prl[i,j,:] = bias[i] * dir_otg[:,i] + np.squeeze(u) * uniform_distribution(j,n_sample_plot,1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Q1"
+    "        x_val_prl[i,j,:] = bias[i] * dir_otg[:,i] + uniform_distribution(j,n_sample_plot,1) * np.squeeze(u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build you model and train it using the function model_fit() provided above "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Q2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot the predicted and ground-truth values for the ith hyperplane: \n",
+    "# Plot the predicted and ground-truth values for all lines\n",
     "# color = ['r','b','g','k']\n",
     "# x_index = np.linspace(-1,1,n_sample_plot)\n",
     "# y_pred = model.predict(x_val_otg[i,:,:])\n",
@@ -324,15 +347,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q3"
+    "# Q4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plot the predicted and ground-truth values for all lines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Written answers for Q4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Repeat the experiment of Q4 with a new choice for x_val_prl[i,j,:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Written answers for Q5"
+   ]
   }
  ],
  "metadata": {
