--- a/Homework/HW3/hw3-starter-code/high_dim.ipynb
+++ b/Homework/HW3/hw3-starter-code/high_dim.ipynb
@@ -106,7 +106,7 @@
     "        value_and_grad.iter.assign_add(1)\n",
     "\n",
     "        # print out iteration & loss\n",
-    "        if (iprint >= 0 and value_and_grad.iter % iprint == 0):\n",
+    "        if (iprint >= 1 and value_and_grad.iter % iprint == 0):\n",
     "            tf.print(\"Loss function eval:\", value_and_grad.iter,\n",
     "                     \"loss:\", pred_loss, \n",
     "                     \"loss_reg:\", regularization_loss,\n",
@@ -166,7 +166,7 @@
     "    init_params = tf.dynamic_stitch(\n",
     "        value_and_grad.idx, model.trainable_variables)\n",
     "\n",
-    "    if (iprint>=0):\n",
+    "    if (iprint>=1):\n",
     "        print()\n",
     "\n",
     "    # train the model\n",
@@ -174,15 +174,21 @@
     "    results = sopt.minimize(fun=value_and_grad, x0=init_params,\n",
     "                            jac=True, method=method,\n",
     "                            options={'maxiter': epochs})\n",
+    "    \n",
+    "    # Update the parameters in the model\n",
+    "    value_and_grad.assign_new_model_parameters(results.x)     \n",
     "\n",
     "    print(\"\\nConvergence information:\")\n",
     "    print('loss:', results.fun)\n",
+    "    # Computing the validation loss  \n",
+    "    if not (validation_data is None):\n",
+    "        val_loss = model.loss(validation_data[1], model(validation_data[0]))     \n",
+    "        tf.print('validation loss:', val_loss)\n",
+    "        # tf.make_ndarray(tf.make_tensor_proto(val_loss))\n",
     "    print('number function evaluations:', results.nfev)\n",
     "    print('number iterations:', results.nit)\n",
     "    print('success flag:', results.success)\n",
     "    print('convergence message:', results.message)\n",
-    "\n",
-    "    value_and_grad.assign_new_model_parameters(results.x)\n",
     "\n",
     "    # Plot history of loss\n",
     "    plt.figure()   \n",
@@ -192,7 +198,7 @@
     "    plt.legend()\n",
     "    plt.xlabel('epoch')\n",
     "    plt.yscale('log')\n",
-    "    if validation_data is None:    \n",
+    "    if x_val is None:    \n",
     "        plt.title('Training loss')\n",
     "    else:\n",
     "        plt.title('Training and validation losses')\n",
