--- a/Homework/HW5/hw5-starter-code/PIML.ipynb
+++ b/Homework/HW5/hw5-starter-code/PIML.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "institutional-system",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "contemporary-empire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +208,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thousand-niagara",
    "metadata": {},
    "source": [
     "### Code for data generation."
@@ -219,7 +216,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nonprofit-array",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +275,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dynamic-payroll",
    "metadata": {},
    "source": [
     "# Questions 1, 2, 3, 4"
@@ -288,7 +283,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "moved-injury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,20 +301,21 @@
     "    def call(self, inputs):\n",
     "        # Forward pass for model, inputs is of size B x 1, where B is batch size\n",
     "        \n",
+    "        # Use layers defined in __init__ for the forward pass to compute outputs\n",
+    "        \n",
     "        # delete the line below when your implementation is complete\n",
     "        pass\n",
     "        \n",
-    "        # 1. Use layers defined in __init__ for the forward pass\n",
-    "        \n",
-    "        # 2. Split the output from the final layer into u, k, a:\n",
-    "        # u, k, a = tf.split(final_layer_output, num_or_size_splits=3, axis=1)\n",
-    "        \n",
-    "        return u, k, a\n",
+    "        return outputs\n",
     "\n",
     "    def get_derivatives(self, x_input):\n",
     "        x_input = tf.convert_to_tensor(x_input)\n",
     "        \n",
     "        # Compute u, k, a, du/dx (denoted as variable u_x) and the LHS of ODE (denoted as variable phys)\n",
+    "        \n",
+    "        # To compute u, k, a, split the output from the call method, e.g.\n",
+    "        # z = self(x_input)\n",
+    "        # u, k, a = tf.split(z, num_or_size_splits=3, axis=1)\n",
     "        \n",
     "        # delete the line below when your implementation is complete\n",
     "        pass\n",
@@ -328,10 +323,10 @@
     "        return u, k, a, u_x, phys\n",
     "    \n",
     "    def loss(self, X, Y):\n",
-    "        # u = self(X[0])[0]\n",
+    "        # u = self(X[0])[:, 0]\n",
     "        # loss_u = self.loss_fun(Y[0], u)\n",
     "        \n",
-    "        # k = self(X[1])[1]\n",
+    "        # k = self(X[1])[:, 1]\n",
     "        # loss_k = ...\n",
     "        \n",
     "        # a = ...\n",
@@ -350,7 +345,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dried-papua",
    "metadata": {},
    "source": [
     "# Question 5"
@@ -359,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "piano-tunisia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +373,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "everyday-president",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +412,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coral-minnesota",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +440,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threatened-monaco",
    "metadata": {},
    "source": [
     "# Question 6"
@@ -458,7 +448,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "random-warehouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +465,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "metallic-brave",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +485,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "uniform-declaration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +512,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bottom-feeling",
    "metadata": {},
    "source": [
     "# Question 7"
@@ -534,7 +520,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "valued-wichita",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +537,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "responsible-aspect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +573,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seventh-cowboy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
